# apcspc

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
files/: akari.ap  test.apcsp
files/accuracy_tests/: ALL.apcsp  arithmetic.ap  boolean.apcsp  fib.ap  for_each.ap  ifelse.ap  index_error.ap  list_copy.apcsp  list_functions.apcsp  lists.apcsp  nested_control_flow.ap  procedure_early_return.ap  procedure_with_return.ap  procedure_without_return.ap  random_range.apcsp  repeat_times.ap  repeat_until.ap
files/stress_tests/: infinite_loop.ap  precise_fib.ap  precise_fib.apcsp  sine.apcsp
src/: block.cpp  block.h  expressions.cpp  expressions.h  main.cpp  util.cpp  util.h
src/types/: CompilerContext.cpp  CompilerContext.h  ExecResult.cpp  ExecResult.h  Procedure.cpp  Procedure.h  Variable.cpp  Variable.h
